# riotlogin

./: TODO.md  bun.lockb  package.json  svelte.config.js  vite.config.js
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  win.rs
src/actions/: accounts.ts  password.ts  ranks.ts  settings.ts
src/actions/accounts/: edit.ts
src/actions/ranks/: pull.ts
src/actions/utils/: periodic.ts
src/components/account/: Account.svelte  AccountGroup.svelte  AccountGroupContainer.svelte  EditRemoveActions.svelte  GreenRedActions.svelte  RemoveDeleteActions.svelte  account.ts
src/components/account/util/: AccountDropdownItem.svelte
src/components/common/: Header.svelte
src/components/donation/: Donation.svelte
src/components/dropdown/: Dropdown.svelte
src/components/overlay/: Dropdown.svelte  Modal.svelte  modal.ts
src/components/setting/: Setting.svelte  SettingGroup.svelte
src/components/util/: DashedNewButton.svelte  Icon.svelte  Loader.svelte  clickOutside.ts  icon.ts  riot.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/settings/: +page.svelte
src/static/: rank_urls.json  rank_urls_schema.json
src/store/: app.ts  password.ts  persistent.ts  ui.ts
src/stores/: app.ts  password.ts  persistent.ts  settings.ts
src/types/: riot.ts
