[package]
name = "riotaccmanager"
version = "0.1.0"
description = "RiotLogin"
authors = ["you"]
edition = "2021"

[lib]
name = "riotaccmanager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-prevent-default = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = "0.58.0"
tauri-plugin-store = "2.0.0-rc"
tauri-plugin-process = "2.0.0-rc"
argon2 = "0.5.3"
rand_core = { version = "0.6.4", features = ["std"] }
tauri-plugin-fs = "2.0.0-rc"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.0.0-rc"
tauri-plugin-autostart = "2.0.0-rc"

# see https://tauri.app/v1/guides/building/app-size/#rust-build-time-optimizations
[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
